[tool.poetry]
name = "rdsa-utils"
version = "0.1.0-dev0"
description = ""
authors = ["Reproducible Data Science & Analysis, ONS"]
maintainers = [
   "Matthew Price <Matthew.G.Price@ons.gov.uk>",
]

readme = "README.md"
repository = "https://github.com/ONSdigital/rdsa-utils"
documentation = "https://github.com/ONSdigital/rdsa-utils"


[tool.poetry.dependencies]
python = "^3.8"
humanfriendly = "^9.1"


[tool.poetry.group.dev.dependencies]
pandas = "1.5.3"
pyspark = "3.3.1"
pytest = "^7.1.0"
pytest-cov = "^4.0.0"
pytest-lazy-fixture = "^0.6.0"
pytest-mock = "^3.8.0"
ruff = "^0.0.264"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
   "A",
   "B",
   "C4",
   "D",
   "DTZ",
   "E",
   "EM",
   "F",
   "ISC",
   "N",
   "NPY",
   "PD",
   "PT",
   "PTH",
   "Q",
   "T10",
   "T20",
   "W",
   "YTT",
]

# Ignore these rules everywhere.
ignore = [
   # N812: lowercase-imported-as-non-lowercase
   # This clashes with pyspark types and functions imports.
   "N812",
   # PD901: pandas-df-variable-name
   # This complains about anything called df.
   "PD901",
]
line-length = 80


[tool.ruff.per-file-ignores]
# D104 Missing docstring in public package.
# E202, E203 is whitespace before/after (), which is sometimes
# broken when aligning data in test scripts. Not implemented in Ruff.
# E501 is line too long.
# F403 and F405 relate to importing using *. It is usually useful to
# do so in test scripts.
"*/test_utils.py" = [
   "EM102"
]
"*/__init__.py" = [
   "D104",
]
"tests/*" = [
   "D100",
   # "E202", "E203",
   "E501",
   "F403", "F405",
   "PT011"
]