[project]
name = "rdsa-utils"
dynamic = ["version"]
description = "A suite of PySpark, Pandas, and general pipeline utils for Reproducible Data Science and Analysis (RDSA) projects."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8, <3.14"
authors = [
    { name = "Reproducible Data Science & Analysis, ONS", email = "RDSA.Support@ons.gov.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cloudpathlib[gs]>=0.15.1",
    "humanfriendly>=9.1",
    "more-itertools>=9.0.0",
    "pandas",
    "pydantic>=2.6.2",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1",
    "google-cloud-bigquery>=3.17.2",
    "google-cloud-storage>=2.14.0",
    "boto3>=1.34.103",
    "codetiming",
    "standard-distutils; python_version >= '3.12'",
    "xlsxwriter",
    "openpyxl",
    "papermill",
    "nbconvert",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/ONSdigital/rdsa-utils"
Documentation = "https://onsdigital.github.io/rdsa-utils/"
Repository = "https://github.com/ONSdigital/rdsa-utils"

[dependency-groups]
dev = [
    "pre-commit>=2.6.0",
    "ruff>=0.9.1",
    "chispa>=0.9.2",
    "coverage[toml]>=7.1.0",
    "pytest>=7.1.0, <8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-lazy-fixture>=0.6.0",
    "pytest-mock>=3.8.0",
    "pyspark==3.5.1",
    "moto>=5.0.7",
    "freezegun",
]
doc = [
    "ons-mkdocs-theme>=1.2.4; python_version >= '3.10'",
    "mkdocstrings[python]>=0.22.0; python_version >= '3.10'",
    "mkdocs-git-revision-date-localized-plugin>=1.2.1; python_version >= '3.10'",
    "mkdocs-jupyter>=0.24.3; python_version >= '3.10'",
    "mkdocs-mermaid2-plugin>=1.1.1; python_version >= '3.10'",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "rdsa_utils/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["rdsa_utils"]

[tool.hatch.build.targets.sdist]
include = [
    "rdsa_utils/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ---------- Ruff (linting + formatting) ----------
# Replaces .ruff.toml, black config, and .isort.cfg

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",      # isort rules — replaces standalone isort
    "ISC",
    "N",
    "NPY",
    "PD",
    "PT",
    "PTH",
    "Q",
    "T10",
    "T20",
    "W",
    "YTT",
]
ignore = ["N812", "E712", "E721", "COM812", "PD901"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["rdsa_utils"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["D104"]
"*/" = ["B006", "PTH123", "B008"]
"tests/*" = ["ANN", "D100", "E501", "F403", "F405", "PT011", "B017", "D205"]
"rdsa_utils/logging.py" = ["A005"]
"rdsa_utils/typing.py" = ["A005"]
"rdsa_utils/helpers/pyspark_log_parser/parser.py" = ["A005"]