[metadata]
name = rdsa-utils
version = attr: rdsa_utils.__version__
author = Reproducible Data Science & Analysis, ONS
author_email = Diego.Lara.De.Andres@ons.gov.uk, Meg.Scammell@ons.gov.uk, Dominic.Bean@ons.gov.uk
description = A suite of pyspark, pandas and general pipeline utils for Reproducible Data Science and Analysis projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/rdsa-utils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8, <3.11
package_dir =
    = rdsa_utils

[options.packages.find]
where=rdsa_utils
