[metadata]
name = rdsa-utils
version = attr: rdsa_utils.__version__
author = Reproducible Data Science & Analysis, ONS
author_email = Diego.Lara.De.Andres@ons.gov.uk, Meg.Scammell@ons.gov.uk, Dominic.Bean@ons.gov.uk
description = A suite of pyspark, pandas and general pipeline utils for Reproducible Data Science and Analysis projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/rdsa-utils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    cloudpathlib[gs]>=0.15.1
    humanfriendly>=9.1
    more-itertools>=9.0.0
    pandas==1.5.3
    pydantic==2.0
    pyspark==3.3.1
    pyyaml>=6.0.1
    tomli>=2.0.1
    google-cloud-bigquery==3.3.5
    google-cloud-storage==2.5.0

[options.packages.find]
where = .
include = rdsa_utils*

[options.extras_require]
dev =
    bump2version>=1.0.0
    pre-commit>=2.6.0
    ruff>=0.0.270
    chispa>=0.9.2
    coverage[toml]>=7.1.0
    pytest>=7.1.0, <8.0.0  # Temporarily pin pytest due to compatibility issues
    pytest-cov>=4.0.0
    pytest-lazy-fixture>=0.6.0
    pytest-mock>=3.8.0
doc =
    mkdocs>=1.4.2
    mkdocs-tech-docs-template>=0.1.2
    mkdocstrings[python]>=0.22.0
    mkdocs-git-revision-date-localized-plugin>=1.2.1
    mkdocs-jupyter>=0.24.3
    mkdocs-mermaid2-plugin>=1.1.1
