[metadata]
name = rdsa-utils
version = attr: rdsa_utils.__version__
author = Reproducible Data Science & Analysis, ONS
author_email = Diego.Lara.De.Andres@ons.gov.uk, Meg.Scammell@ons.gov.uk, Dominic.Bean@ons.gov.uk
description = A suite of PySpark, Pandas, and general pipeline utils for Reproducible Data Science and Analysis (RDSA) projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/rdsa-utils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8, <3.14
include_package_data = True
install_requires =
    cloudpathlib[gs]>=0.15.1
    humanfriendly>=9.1
    more-itertools>=9.0.0
    pandas
    pydantic>=2.6.2
    pyyaml>=6.0.1
    tomli>=2.0.1
    google-cloud-bigquery>=3.17.2
    google-cloud-storage>=2.14.0
    boto3>=1.34.103
    codetiming
    standard-distutils ; python_version >= "3.12"
    xlsxwriter
    openpyxl
    papermill
    nbconvert
    matplotlib

[options.packages.find]
where = .
include = rdsa_utils*

[options.package_data]
rdsa_utils.helpers.pyspark_log_parser = data/*.db, *.ipynb

[options.extras_require]
dev =
    bump2version>=1.0.0
    pre-commit>=2.6.0
    ruff>=0.0.270
    chispa>=0.9.2
    coverage[toml]>=7.1.0
    pytest>=7.1.0, <8.0.0  # Temporarily pin pytest due to https://github.com/TvoroG/pytest-lazy-fixture/issues/65
    pytest-cov>=4.0.0
    pytest-lazy-fixture>=0.6.0
    pytest-mock>=3.8.0
    pyspark==3.5.1
    moto>=5.0.7
    black>=24.4.2
    isort>=5.13.2
doc =
    mkdocs>=1.4.2
    ons-mkdocs-theme>=1.1.3
    mkdocstrings[python]>=0.22.0
    mkdocs-git-revision-date-localized-plugin>=1.2.1
    mkdocs-jupyter>=0.24.3
    mkdocs-mermaid2-plugin>=1.1.1
